# ML-engineer_chrun

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
models/: model_version_1
notebooks/: 1.0-FA-Data-Preprocessing.ipynb  1.0-FA-EDA.ipynb  1.0-FA-Feature-Eng.ipynb  1.0-FA-ML-Expriment.ipynb  customer_discounts.csv  grid_cv_customer_discounts.csv
processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
rexel_chrun_case_study/: __init__.py  common.py  config.ini  mlflow_exp.py  predict.py  train.py
rexel_chrun_case_study/mlflow/mlruns/0/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/50b7778b86774156beeec0c7621b7987/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/51c4c0b4317641babe72ad3123740b44/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/81d6f62a7df7475db877747864df29ac/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/835853b49bad4a3888e8917005cb3479/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/b50c4dba581f4987ba29f3ad2831da75/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/e03563589017473c8b852d049848c20f/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/ed733c0aa3e64a7287345d6a38c3cd82/: meta.yaml
rexel_chrun_case_study/mlflow/mlruns/209659684770355448/f8ecfb0970a347f3a9e6cbfcfb88751b/: meta.yaml
(+51 files in other folders)
