[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rexel_chrun_case_study"
version = "0.0.1"
description = "Predict customer churn for TELCO Inc and recommend personalized discounts to maximize future profit using a provided dataset."
authors = [
  { name = "Faical" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rexel_chrun_case_study"]
force_sort_within_sections = true
